# ukrainization

./: README.md  pyproject.toml  requirements.txt  setup.cfg  test.py  test_uk.py
linguist/: lemmatization.py
normalization/: lemmatization.py  stemming.py
preparator/: preparation.py
tests/: test_uk.py
ukrainization/: lemmatization.py  stemming.py  stop_words.py
