[metadata]
# replace with your username:
# name = example-pkg-YOUR-USERNAME-HERE
version = 1.0
author = Oleksandr Kosovan
author_email = oleksandr.kosovan@yahoo.com
description = Ukrainization is a Python library for working with ukrainian text.
long_description = file: README.md
# long_description_content_type = text/markdown
url = https://github.com/Ukrainization/ukrainization
classifiers =
    Programming Language :: Python :: 3
    License :: GNU :: GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6